<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.sfgdi</groupId>
    <artifactId>sfg-di</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>sfg.di</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <project.build.sourceEnconding>UTF-8</project.build.sourceEnconding>
        <project.reporting.outputEnconding>UTF-8</project.reporting.outputEnconding>
        <java.version>11</java.version>
       <jaxb.version>2.3.0</jaxb.version>

        <!-- Web dependencies -->
        <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
        <webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
        <webjars-jquery.version>2.2.4</webjars-jquery.version>
        <wro4j.version>1.8.0</wro4j.version>


<!--        <jacoco.version>0.8.5</jacoco.version>-->

    </properties>

        <dependencies>

            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${jaxb.version}</version>
            </dependency>

            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-core</artifactId>
                <version>${jaxb.version}</version>
            </dependency>

            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${jaxb.version}</version>
            </dependency>

            <!-- Spring and Spring Boot dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-cache</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-validation</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-thymeleaf</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.junit.vintage</groupId>
                        <artifactId>junit-vintage-engine</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.20</version>
                <scope>provided</scope>
            </dependency>


<!--            &lt;!&ndash; Databases - Uses H2 by default &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>com.h2database</groupId>-->
<!--                <artifactId>h2</artifactId>-->
<!--                <scope>runtime</scope>-->
<!--            </dependency>-->

            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.15</version>
            </dependency>

            <!-- caching -->
            <dependency>
                <groupId>javax.cache</groupId>
                <artifactId>cache-api</artifactId>
            </dependency>

            <dependency>
                <groupId>org.ehcache</groupId>
                <artifactId>ehcache</artifactId>
            </dependency>

            <!-- webjars -->
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>webjars-locator-core</artifactId>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>jquery</artifactId>
                <version>${webjars-jquery.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>jquery-ui</artifactId>
                <version>${webjars-jquery-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>bootstrap</artifactId>
                <version>${webjars-bootstrap.version}</version>
            </dependency>
            <!-- end of webjars -->

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-devtools</artifactId>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </dependency>


        </dependencies>
<build>
<plugins>

    <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
            <execution>
                <goals>
                    <goal>repackage</goal>
                </goals>
                <configuration>
                    <classifier>exec</classifier>
                </configuration>
            </execution>
        </executions>
    </plugin>

<!--    <plugin>-->
<!--        <groupId>org.jacoco</groupId>-->
<!--        <artifactId>jacoco-maven-plugin</artifactId>-->
<!--        <version>${jacoco.version}</version>-->
<!--        <executions>-->
<!--            <execution>-->
<!--                <goals>-->
<!--                    <goal>prepare-agent</goal>-->
<!--                </goals>-->
<!--            </execution>-->
<!--            <execution>-->
<!--                <id>report</id>-->
<!--                <phase>prepare-package</phase>-->
<!--                <goals>-->
<!--                    <goal>report</goal>-->
<!--                </goals>-->
<!--            </execution>-->
<!--        </executions>-->
<!--    </plugin>-->

    <!-- Spring Boot Actuator displays build-related information if a git.properties
      file is present at the classpath -->

    <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
    </plugin>

    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
                <goal>install</goal>
            <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
    </plugin>

    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>

        <configuration>
            <argLine>
                --illegal-acess=permit
            </argLine>
        </configuration>

    </plugin>

    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
            <argLine>
                --illegal-access=permit
            </argLine>
        </configuration>

        <executions>
            <execution>
                <goals>
                    <goal>integration-test</goal>
                    <goal>verify</goal>
                </goals>
            </execution>

        </executions>

    </plugin>


    <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <executions>
            <execution>
                <goals>
                    <goal>revision</goal>
                </goals>
            </execution>
        </executions>
        <configuration>
            <verbose>true</verbose>
            <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
            <generateGitPropertiesFile>true</generateGitPropertiesFile>
            <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
            </generateGitPropertiesFilename>
            <failOnNoGitDirectory>false</failOnNoGitDirectory>
            <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
        </configuration>
    </plugin>

    <plugin>
        <groupId>ro.isdc.wro4j</groupId>
        <artifactId>wro4j-maven-plugin</artifactId>
        <version>${wro4j.version}</version>
        <executions>
            <execution>
                <phase>generate-resources</phase>
                <?m2e execute onConfiguration,onIncremental?>
                <goals>
                    <goal>run</goal>
                </goals>
            </execution>
        </executions>
        <configuration>
            <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
            <cssDestinationFolder>${project.build.directory}/classes/static/resources/css</cssDestinationFolder>
            <wroFile>${basedir}/src/main/wro/wro.xml</wroFile>
            <extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>
            <contextFolder>${basedir}/src/main/less</contextFolder>
        </configuration>
        <dependencies>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>bootstrap</artifactId>
                <version>${webjars-bootstrap.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.9.0</version>
            </dependency>
        </dependencies>
    </plugin>


<!--    <plugin>-->
<!--        <groupId>org.lesscss</groupId>-->
<!--        <artifactId>lesscss-maven-plugin</artifactId>-->
<!--        <version>1.7.0.1.1</version>-->
<!--        <configuration>-->
<!--            <sourceDirectory>${project.basedir}/src/main/less</sourceDirectory>-->
<!--            <outputDirectory>${project.build.directory}/${project.build.finalName}/css</outputDirectory>-->
<!--            <compress>true</compress>-->
<!--            <includes>-->
<!--                <include>main.less</include>-->
<!--            </includes>-->
<!--        </configuration>-->
<!--        <executions>-->
<!--            <execution>-->
<!--                <goals>-->
<!--                    <goal>compile</goal>-->
<!--                </goals>-->
<!--            </execution>-->
<!--        </executions>-->
<!--    </plugin>-->

</plugins>
</build>

<licenses>
<license>
    <name>Apache License, Version 2.0</name>
    <url>https://www.apache.org/licenses/LICENSE-2.0</url>
</license>
</licenses>

<repositories>
<repository>
    <id>spring-snapshots</id>
    <name>Spring Snapshots</name>
    <url>https://repo.spring.io/snapshot</url>
    <snapshots>
        <enabled>true</enabled>
    </snapshots>
</repository>
<repository>
    <id>spring-milestones</id>
    <name>Spring Milestones</name>
    <url>https://repo.spring.io/milestone</url>
    <snapshots>
        <enabled>false</enabled>
    </snapshots>
</repository>
</repositories>

<pluginRepositories>
<pluginRepository>
    <id>spring-snapshots</id>
    <name>Spring Snapshots</name>
    <url>https://repo.spring.io/snapshot</url>
    <snapshots>
        <enabled>true</enabled>
    </snapshots>
</pluginRepository>
<pluginRepository>
    <id>spring-milestones</id>
    <name>Spring Milestones</name>
    <url>https://repo.spring.io/milestone</url>
    <snapshots>
        <enabled>false</enabled>
    </snapshots>
</pluginRepository>
</pluginRepositories>

</project>
